--- a/src/api/views/operadoras/operadoras.ejs
+++ b/src/api/views/operadoras/operadoras.ejs
@@ -53,7 +53,7 @@
                                             <td>
                                                 <div class="row">
                                                     <div class="col">
-                                                        <a href="operadoras/visualizar/<%= operadoras_list[i].ope_codigo %>">
+                                                        <a href="operadoras/<%= operadoras_list[i].ope_codigo %>">
                                                             <svg width="15" height="15" viewBox="0 0 100 100" fill="none"
                                                                 xmlns="http://www.w3.org/2000/svg">
                                                                 <path
