Inicio dos filtros das telas de pesquisa e ajustes de put e getOnly

--- a/src/api/components/footer/footer.ejs
+++ b/src/api/components/footer/footer.ejs
@@ -2,6 +2,6 @@
     <div class="row">
             <legend>Franca, SP</legend>
             <span>Projeto inspirado no site da Oi</span>
-            <span>Feito por Matheus Souza</span>
+            <span>Feito por <a href="https://github.com/matheussouza89/">Matheus Souza</a></span>
     </div>
 </div>
