--- a/src/api/components/navbar/navbar.ejs
+++ b/src/api/components/navbar/navbar.ejs
@@ -45,19 +45,19 @@
           <a class="nav-link p-2 active" aria-current="page" href="/">HOME</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="/docs/5.0/getting-started/introduction/">VOCÊ</a>
+          <a class="nav-link p-2" href="#">VOCÊ</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="/docs/5.0/examples/">PEQUENAS EMPRESAS</a>
+          <a class="nav-link p-2" href="/operadoras">OPERADORAS</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://icons.getbootstrap.com/" target="_blank" rel="noopener">GRANDES EMPRESAS</a>
+          <a class="nav-link p-2" href="/telefones">TELEFONES</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://themes.getbootstrap.com/" target="_blank" rel="noopener">FRANQUIAS</a>
+          <a class="nav-link p-2" href="#">FRANQUIAS</a>
         </li>
         <li class="nav-item col-6 col-md-auto">
-          <a class="nav-link p-2" href="https://blog.getbootstrap.com/" target="_blank" rel="noopener">ACESSIBILIDADE</a>
+          <a class="nav-link p-2" href="#">ACESSIBILIDADE</a>
         </li>
       </ul>
     </div>
