--- a/src/api/views/operadoras/form_operadoras.ejs
+++ b/src/api/views/operadoras/form_operadoras.ejs
@@ -54,14 +54,11 @@
                             <div class="col-6">
                                 <div class="row">
                                     <div class="col-6">
-
-                                        <a type="submit" class="btn btn-success w-100" href='/operadoras'>
-                                            Salvar
-                                        </a>
+                                        <button class="btn btn-success w-100" type="submit" <%= href %>>Salvar</button>
                                     </div>
                                     <div class="col-6">
-                                        <a href="/operadoras">
-                                            <button class="btn btn-danger w-100">Cancelar</button>
+                                        <a class="btn btn-danger w-100" href="/operadoras">
+                                            Cancelar
                                         </a>
                                     </div>
                                 </div>
