--- a/src/public/styles/footer.css
+++ b/src/public/styles/footer.css
@@ -1,5 +1,5 @@
 .footer{
-    border-top: rgb(153, 153, 153) solid 1px;
+    background-color: rgb(241, 241, 241);
     width: 100%;
     height: 100px;
     position: absolute;
